--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -7,12 +7,15 @@
     android:weightSum="1">
 
 
-    <ImageView
+
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:id="@+id/imageView2"
-        android:background="@drawable/albumart"
-        android:layout_gravity="center" />
+        android:id="@+id/coverfor"
+        android:layout_gravity="center"
+        android:focusableInTouchMode="false"
+        app:border_color="@color/material_blue_grey_800"
+        app:border_width="2dp"/>
 
     <LinearLayout
         android:orientation="vertical"
