--- a/app/src/main/res/layout/expnd.xml
+++ b/app/src/main/res/layout/expnd.xml
@@ -53,7 +53,8 @@
             android:padding="5dp"
             android:textSize="18dp"
             android:textColor="@color/purple"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center"
+            android:gravity="center" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -64,7 +65,8 @@
             android:padding="5dp"
             android:textSize="16dp"
             android:textColor="@color/purple1"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:gravity="center" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +77,8 @@
             android:padding="5dp"
             android:textSize="14dp"
             android:textColor="@color/purple1"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:gravity="center" />
 
         <info.hoang8f.widget.FButton
             android:id="@+id/listenonline"
